--- a/source/sass/blocks/places-fieldset.scss
+++ b/source/sass/blocks/places-fieldset.scss
@@ -23,18 +23,13 @@
 }
 
 .places-fieldset__title {
-  @include font-titles-black;
+  @include title-mobile-black;
   text-align: center;
   margin: 0;
 
   @media (min-width: $tablet-width) {
-    @include titles-form-desktop;
+    @include title-desktop-black;
   }
-}
-
-.check-block__label {
-  @include font-titles-black;
-  text-transform: none;
 }
 
 .places-fieldset__choices {
