--- a/source/sass/blocks/client-review.scss
+++ b/source/sass/blocks/client-review.scss
@@ -25,12 +25,11 @@
   margin: 0;
 
   @media (max-width: $mobile-width-only) {
-    @include font-titles-black;
+    @include title-mobile-black;
   }
 
   @media (min-width: $tablet-width) {
     font-size: 30px;
-    line-height: 26px;
     padding-bottom: 20px;
   }
 
@@ -41,7 +40,7 @@
 }
 
 .client-review__slogan {
-  line-height: 24px;
+  @include text-main-photo;
   text-align: center;
   margin: 0;
 
