--- a/source/sass/blocks/hashtag.scss
+++ b/source/sass/blocks/hashtag.scss
@@ -1,5 +1,5 @@
 .hashtag {
-  padding-top: 40px;
+  padding-top: 39px;
 
   @media (min-width: $tablet-width) {
     padding-top: 64px;
@@ -7,8 +7,7 @@
 }
 
 .hashtag__text {
-  font-size: 21px;
-  font-weight: bold;
-  line-height: 26px;
   margin: 0;
+
+  @include title-desktop-black;
 }
