--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,8 +1,8 @@
 .map {
   width: 100%;
-  height: 320px;
 
   @media (max-width: $mobile-width-only) {
+    margin-top: 17px;
     height: 350px;
   }
 
