--- a/source/sass/blocks/phone.scss
+++ b/source/sass/blocks/phone.scss
@@ -1,9 +1,6 @@
 .phone-block {
   display: flex;
 
-  @media (max-width: $mobile-width-only) {
-  }
-
   @media (min-width: $tablet-width) {
     padding-top: 8px;
   }
@@ -24,10 +21,11 @@
 }
 
 .phone-block__input {
-  @include font-titles-black;
-  padding: 0;
+  @include title-mobile-black;
+
   background-color: $grey-color;
   border: none;
+  padding: 0;
   min-width: 230px;
   min-height: 58px;
   font-weight: bold;
