--- a/source/sass/blocks/search-section.scss
+++ b/source/sass/blocks/search-section.scss
@@ -10,9 +10,9 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin-top: 58px;
-    padding-left: 20%;
-    padding-right: 20%;
+    margin-top: 56px;
+    margin-left: 20%;
+    margin-right: 20%;
   }
 
   p {
@@ -36,7 +36,7 @@
 
   @media (max-width: $mobile-width-only) {
     line-height: 24px;
-    padding-top: 22px;
+    padding-top: 20px;
     padding-right: 22px;
     padding-left: 22px;
 
@@ -46,9 +46,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding-top: 22px;
-    padding-right: 12px;
-    padding-left: 14px;
+    padding-top: 35px;
   }
 }
 
@@ -57,7 +55,7 @@
 }
 
 .search-section__button {
-  margin-top: 33px;
+  margin-top: 27px;
   margin-bottom: 33px;
   margin-left: auto;
   margin-right: auto;
@@ -82,7 +80,7 @@
 
   @media (min-width: $tablet-width) {
     @include style-btn-tablet;
-    margin-top: 37px;
+    margin-top: 43px;
     margin-bottom: 58px;
   }
 }
