--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -1,28 +1,56 @@
-// Оформление стилей шрифта
-@mixin font-header-mobil {
-  font-size: 18px;
-  line-height: 40px;
-  font-weight: bold;
-  color: #ffffff;
+// // Оформление стилей шрифта
+
+@mixin text-main {
+  font-size: 14px;
+  line-height: 21px;
+  color: $black-color;
 }
 
-@mixin font-titles-white {
-  font-size: 18px;
+@mixin text-main-photo {
+  font-size: 14px;
+  line-height: 24px;
+  color: $black-color;
+}
+
+@mixin text-main-bold {
+  font-size: 14px;
+  line-height: 24px;
   font-weight: bold;
+  color: $black-color;
+}
+
+@mixin text-main-desktop {
+  font-size: 14px;
   line-height: 26px;
-  color: #ffffff;
+  color: $black-color;
 }
 
-@mixin font-titles-black {
+@mixin title-mobile-black {
   font-size: 18px;
-  font-weight: bold;
   line-height: 26px;
+  font-weight: bold;
+  color: $black-color;
 }
 
-@mixin titles-form-desktop {
+@mixin title-mobile-white {
+  font-size: 18px;
+  line-height: 26px;
   font-weight: bold;
+  color: $white-color;
+}
+
+@mixin title-desktop-black {
   font-size: 21px;
   line-height: 26px;
+  font-weight: bold;
+  color: $black-color;
+}
+
+@mixin title-desktop-white {
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+  color: $white-color;
 }
 
 // Оформление кнопок
