--- a/source/sass/blocks/phone.scss
+++ b/source/sass/blocks/phone.scss
@@ -30,6 +30,10 @@
   min-height: 58px;
   font-weight: bold;
 
+  &::placeholder {
+    color: $black-color;
+  }
+
   @media (min-width: $tablet-width) {
     width: 100%;
     padding-left: 23px;
