--- a/source/sass/blocks/road-card.scss
+++ b/source/sass/blocks/road-card.scss
@@ -27,16 +27,31 @@
 }
 
 .road-card__img-wrapper {
+  margin: 0;
+  padding: 0;
+
   @media (min-width: $tablet-width) {
     position: relative;
     height: 267px;
     overflow: hidden;
-    margin: 0;
   }
 }
 
 .road-card__image {
   @media (min-width: $tablet-width) {
     width: 100%;
+  }
+}
+
+// Секция лайк и число
+
+.road-card__review {
+  @media (min-width: $tablet-width) {
+    padding-right: 36px;
+    padding-top: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 29px;
   }
 }
