--- a/source/sass/blocks/bridge-card.scss
+++ b/source/sass/blocks/bridge-card.scss
@@ -27,11 +27,13 @@
 }
 
 .bridge-card__img-wrapper {
+  margin: 0;
+  padding: 0;
+
   @media (min-width: $tablet-width) {
     position: relative;
     height: 267px;
     overflow: hidden;
-    margin: 0;
   }
 }
 
@@ -39,5 +41,18 @@
   @media (min-width: $tablet-width) {
     width: 100%;
     height: 267px;
+  }
+}
+
+// Секция лайк и число
+
+.bridge-card__review {
+  @media (min-width: $tablet-width) {
+    padding-right: 29px;
+    padding-top: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 29px;
   }
 }
