--- a/source/sass/blocks/plants-card.scss
+++ b/source/sass/blocks/plants-card.scss
@@ -28,16 +28,31 @@
 }
 
 .plants-card__img-wrapper {
+  margin: 0;
+  padding: 0;
+
   @media (min-width: $tablet-width) {
     position: relative;
     height: 267px;
     overflow: hidden;
-    margin: 0;
   }
 }
 
 .photo-cactus__image {
   @media (min-width: $tablet-width) {
     width: 100%;
+  }
+}
+
+// Секция лайк и число
+
+.plants-card__review {
+  @media (min-width: $tablet-width) {
+    padding-right: 29px;
+    padding-top: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 29px;
   }
 }
