--- a/source/sass/blocks/square-item.scss
+++ b/source/sass/blocks/square-item.scss
@@ -1,8 +1,9 @@
 .square-item {
-  border-bottom: 1px solid #d6d6d6;
+  @media (max-width: $mobile-width-only) {
+    border-bottom: 1px solid #d6d6d6;
+  }
 }
 
-// border-width border-style border-color|initial|inherit;
 .square-item__section {
   text-align: center;
   padding-top: 26px;
@@ -19,7 +20,7 @@
     padding-top: 11%;
     padding-left: 13%;
     padding-right: 13%;
-    padding-bottom: 7%;
+    padding-bottom: 15%;
   }
 }
 
@@ -34,7 +35,12 @@
 
 .square-item__slogan {
   margin: 0;
-  padding-top: 18px;
+
+  @media (max-width: $mobile-width-only) {
+    padding-top: 18px;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
 
   @media (min-width: $tablet-width) {
     padding-top: 23px;
