--- a/source/sass/blocks/tourists-item.scss
+++ b/source/sass/blocks/tourists-item.scss
@@ -17,7 +17,7 @@
     padding-top: 11%;
     padding-left: 18%;
     padding-right: 17%;
-    padding-bottom: 16%;
+    padding-bottom: 15%;
   }
 }
 
@@ -32,7 +32,12 @@
 
 .tourists-item__slogan {
   margin: 0;
-  padding-top: 18px;
+
+  @media (max-width: $mobile-width-only) {
+    padding-top: 18px;
+    padding-left: 36px;
+    padding-right: 36px;
+  }
 
   @media (min-width: $tablet-width) {
     padding-top: 23px;
