--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -6,6 +6,10 @@
   @media (min-width: $tablet-width) {
     padding-top: 38px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 44px;
+  }
 }
 
 .copyright__text {
