--- a/source/sass/blocks/hashtag.scss
+++ b/source/sass/blocks/hashtag.scss
@@ -4,6 +4,10 @@
   @media (min-width: $tablet-width) {
     padding-top: 43px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 49px;
+  }
 }
 
 .hashtag__text {
