--- a/source/sass/blocks/impression-choice.scss
+++ b/source/sass/blocks/impression-choice.scss
@@ -19,6 +19,14 @@
     border-radius: 30px;
     margin-right: 26px;
 
+    @media (min-width: $tablet-width) {
+      margin-right: 22px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-right: 24px;
+    }
+
     .impression-choice__input + & {
       background-color: #eeeeee;
     }
