--- a/source/sass/blocks/place-choice.scss
+++ b/source/sass/blocks/place-choice.scss
@@ -3,16 +3,15 @@
 }
 
 .place-choice__label {
+  @include title-mobile-black;
   display: flex;
   align-items: center;
   width: 100%;
-  font-weight: bold;
   text-transform: none;
-  font-size: 18px;
 
   &::before {
     display: inline-block;
-    margin-right: 27px;
+    margin-right: 25px;
     content: "";
     width: 54px;
     height: 55px;
