--- a/source/sass/blocks/review-form.scss
+++ b/source/sass/blocks/review-form.scss
@@ -14,9 +14,10 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 120px;
-    margin-right: 120px;
     grid-template-rows: 1fr auto auto 1fr;
+    margin-left: 120px;
+    margin-right: 105px;
+    margin-bottom: 67px;
   }
 }
 
@@ -24,23 +25,36 @@
   @include style-btn;
 
   @media (max-width: $mobile-width-only) {
+    margin-bottom: 37px;
+    align-items: center;
+    justify-content: center;
     margin-left: auto;
     margin-right: auto;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     min-width: 324px;
-    margin: 0;
+    margin-top: 7px;
+    padding-top: 5px;
+    padding-left: 65px;
+    padding-top: 8px;
   }
 
   @media (min-width: $desktop-width) {
     min-width: 480px;
-    padding-top: 5px;
+    padding-left: 151px;
+    padding-right: 145px;
   }
 }
 
 .review-form__text-requared {
   @media (max-width: $mobile-width-only) {
     display: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 29px;
   }
 }
