Исправление PixelPerfect для страницы photo.html.

--- a/source/sass/blocks/facilities.scss
+++ b/source/sass/blocks/facilities.scss
@@ -1,4 +1,11 @@
 .facilities {
+  @media (max-width: $mobile-width-only) {
+    margin-top: 27px;
+    margin-left: 12px;
+    margin-right: 25px;
+    margin-bottom: 36px;
+  }
+
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
