--- a/source/sass/blocks/bridge-card.scss
+++ b/source/sass/blocks/bridge-card.scss
@@ -30,6 +30,10 @@
   margin: 0;
   padding: 0;
 
+  @media (max-width: $mobile-width-only) {
+    height: 280px;
+  }
+
   @media (min-width: $tablet-width) {
     position: relative;
     height: 267px;
@@ -38,10 +42,8 @@
 }
 
 .bridge-card__image {
-  @media (min-width: $tablet-width) {
-    width: 100%;
-    height: 267px;
-  }
+  width: 100%;
+  height: 100%;
 }
 
 // Секция лайк и число
