--- a/source/sass/blocks/plants-card.scss
+++ b/source/sass/blocks/plants-card.scss
@@ -31,6 +31,10 @@
   margin: 0;
   padding: 0;
 
+  @media (max-width: $mobile-width-only) {
+    height: 280px;
+  }
+
   @media (min-width: $tablet-width) {
     position: relative;
     height: 267px;
@@ -38,10 +42,9 @@
   }
 }
 
-.photo-cactus__image {
-  @media (min-width: $tablet-width) {
-    width: 100%;
-  }
+.plants-card__image {
+  width: 100%;
+  height: 100%;
 }
 
 // Секция лайк и число
