--- a/source/sass/blocks/introduce-fieldset.scss
+++ b/source/sass/blocks/introduce-fieldset.scss
@@ -61,6 +61,15 @@
   background-color: $grey-color;
   border: none;
   min-height: 58px;
+
+  &:hover {
+    background-color: #e5e5e5;
+  }
+
+  &:focus {
+    background-color: $white-color;
+    border: 4px solid #e5e5e5;
+  }
 }
 
 .first-name__label,
@@ -200,6 +209,7 @@
 
   @media (min-width: $desktop-width) {
     width: 100%;
-    padding-left: 25px;
+    padding-left: 20px;
+    margin-left: 20px;
   }
 }
