--- a/source/sass/blocks/facilities.scss
+++ b/source/sass/blocks/facilities.scss
@@ -24,6 +24,14 @@
     @media (min-width: $tablet-width) {
       padding-top: 23px;
     }
+
+    br {
+      display: none;
+
+      @media (min-width: $desktop-width) {
+        display: block;
+      }
+    }
   }
 
   .facilities__item {
