--- a/source/sass/blocks/introduce-fieldset.scss
+++ b/source/sass/blocks/introduce-fieldset.scss
@@ -27,9 +27,6 @@
 
   @media (min-width: $tablet-width) {
     padding-left: 56px;
-  }
-
-  @media (min-width: $desktop-width) {
     border-left: 1px solid #e5e5e5;
   }
 }
@@ -61,6 +58,7 @@
   background-color: $grey-color;
   border: none;
   min-height: 58px;
+  box-sizing: border-box;
 
   &:hover {
     background-color: #e5e5e5;
@@ -69,6 +67,7 @@
   &:focus {
     background-color: $white-color;
     border: 4px solid #e5e5e5;
+    outline: none;
   }
 }
 
@@ -164,18 +163,30 @@
     margin-top: 15px;
     margin-left: 10px;
     padding-left: 22px;
+
+    &:focus {
+      padding-left: 18px;
+    }
   }
 
   @media (min-width: $tablet-width) {
     width: 100%;
     margin-left: 14px;
     padding-left: 25px;
+
+    &:focus {
+      padding-left: 21px;
+    }
   }
 
   @media (min-width: $desktop-width) {
     width: 100%;
     margin-left: 13px;
     padding-left: 22px;
+
+    &:focus {
+      padding-left: 18px;
+    }
   }
 }
 
@@ -185,12 +196,20 @@
     margin-bottom: 15px;
     margin-left: 11px;
     padding-left: 21px;
+
+    &:focus {
+      padding-left: 17px;
+    }
   }
 
   @media (min-width: $tablet-width) {
     width: 100%;
     padding-left: 21px;
     margin-left: 15px;
+
+    &:focus {
+      padding-left: 17px;
+    }
   }
 }
 
@@ -199,17 +218,29 @@
     width: 55%;
     margin-left: 10px;
     padding-left: 19px;
+
+    &:focus {
+      padding-left: 15px;
+    }
   }
 
   @media (min-width: $tablet-width) {
     width: 100%;
     padding-left: 20px;
-    margin-left: 13px;
+    margin-left: 20px;
+
+    &:focus {
+      padding-left: 16px;
+    }
   }
 
   @media (min-width: $desktop-width) {
     width: 100%;
     padding-left: 20px;
     margin-left: 20px;
+
+    &:focus {
+      padding-left: 16px;
+    }
   }
 }
