--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -42,7 +42,7 @@
     top: 15px;
     right: 20px;
     cursor: pointer;
-    z-index: 2;
+    z-index: 3;
   }
 }
 
@@ -105,16 +105,6 @@
   text-decoration: none;
   width: 100%;
 
-  @media (min-width: $tablet-width) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: center;
-    color: $black-color;
-    font-size: 14px;
-    line-height: 26px;
-  }
-
   @media (max-width: $mobile-width-only) {
     li {
       border-top: 1px solid rgba($color: #ffffff, $alpha: 0.2);
@@ -125,6 +115,23 @@
         box-shadow: inset 0 -8px 10px -6px rgba($color: #000000, $alpha: 0.4);
       }
     }
+  }
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    color: $black-color;
+    font-size: 14px;
+    line-height: 26px;
+  }
+}
+
+// box-shadow fix
+@media (max-width: $mobile-width-only) {
+  .main-nav:not(.main-nav--opened) .main-nav__list li:last-child {
+    box-shadow: none;
   }
 }
 
