--- a/source/sass/blocks/phone.scss
+++ b/source/sass/blocks/phone.scss
@@ -8,7 +8,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding-top: 10px;
+    padding-top: 9px;
   }
 
   @media (min-width: $desktop-width) {
@@ -50,7 +50,9 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding-left: 23px;
+    width: 100%;
+    padding-left: 22px;
+    padding-top: 4px;
   }
 
   @media (min-width: $desktop-width) {
@@ -66,4 +68,10 @@
   width: 58px;
   height: 58px;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 3px;
+    box-sizing: content-box;
+    padding-right: 2px;
+  }
 }
