--- a/source/sass/blocks/search-section.scss
+++ b/source/sass/blocks/search-section.scss
@@ -54,13 +54,17 @@
   color: hsl(0, 0%, 100%);
 }
 
-.search-section__button {
-  margin-top: 27px;
-  margin-bottom: 33px;
-  margin-left: auto;
-  margin-right: auto;
-
+.search-section__link {
   @include style-btn;
+
+  @media (max-width: $mobile-width-only) {
+    margin-top: 27px;
+    margin-bottom: 33px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 46px;
+    padding-top: 15px;
+  }
 
   &:hover {
     background-color: #669ec0;
