--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -55,3 +55,4 @@
 @import "blocks/place-choice.scss";
 @import "blocks/check-block.scss";
 @import "blocks/comments-fieldset.scss";
+@import "blocks/modal-form.scss";
