--- a/source/sass/blocks/email.scss
+++ b/source/sass/blocks/email.scss
@@ -22,6 +22,16 @@
     color: $black-color;
   }
 
+  &:hover {
+    background-color: #e5e5e5;
+  }
+
+  &:focus {
+    background-color: $white-color;
+    border: 4px solid #e5e5e5;
+    outline: none;
+  }
+
   @media (max-width: $mobile-width-only) {
     padding-left: 21px;
     padding-right: 11px;
@@ -34,6 +44,9 @@
   }
 
   @media (min-width: $desktop-width) {
+    margin-left: 17px;
+    padding-right: 29px;
+    padding-top: 0;
   }
 }
 
@@ -53,7 +66,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-left: 10px;
+    width: 70px;
   }
 }
 
