--- a/source/sass/blocks/introduce-fieldset.scss
+++ b/source/sass/blocks/introduce-fieldset.scss
@@ -5,7 +5,6 @@
 
   @media (max-width: $mobile-width-only) {
     border-bottom: 1px solid #e5e5e5;
-    padding-bottom: 25px;
   }
 
   @media (min-width: $tablet-width) {
@@ -22,7 +21,9 @@
 .introduce-fieldset__section {
   @media (max-width: $mobile-width-only) {
     margin-top: 22px;
-    padding-left: 13px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 25px;
   }
 
   @media (min-width: $tablet-width) {
@@ -89,20 +90,12 @@
 }
 
 .last-name__label {
-  @media (max-width: $mobile-width-only) {
-    padding-left: 7px;
-  }
-
   @media (min-width: $tablet-width) {
     align-self: center;
   }
 }
 
 .middle-name__label {
-  @media (max-width: $mobile-width-only) {
-    padding-left: 7px;
-  }
-
   @media (min-width: $tablet-width) {
     align-self: center;
   }
@@ -110,8 +103,7 @@
 
 .introduce-fieldset__first-name {
   @media (max-width: $mobile-width-only) {
-    margin-left: 7px;
-    margin-top: 5px;
+    margin-top: 20px;
   }
 
   @media (min-width: $tablet-width) {
@@ -135,7 +127,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 18px;
+    padding-top: 21px;
   }
 
   @media (min-width: $desktop-width) {
@@ -148,7 +140,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 18px;
+    padding-top: 21px;
   }
 
   @media (min-width: $desktop-width) {
@@ -159,8 +151,7 @@
 
 .first-name__input {
   @media (max-width: $mobile-width-only) {
-    min-width: 205px;
-    margin-top: 15px;
+    width: 229px;
     margin-left: 10px;
     padding-left: 22px;
 
@@ -192,8 +183,8 @@
 
 .last-name__input {
   @media (max-width: $mobile-width-only) {
-    width: 55%;
-    margin-bottom: 15px;
+    width: 191px;
+    margin-bottom: 21px;
     margin-left: 11px;
     padding-left: 21px;
 
@@ -215,8 +206,8 @@
 
 .middle-name__input {
   @media (max-width: $mobile-width-only) {
-    width: 55%;
-    margin-left: 10px;
+    width: 191px;
+    margin-left: 14px;
     padding-left: 19px;
 
     &:focus {
