--- a/source/sass/blocks/phone.scss
+++ b/source/sass/blocks/phone.scss
@@ -44,6 +44,16 @@
     color: $black-color;
   }
 
+  &:hover {
+    background-color: #e5e5e5;
+  }
+
+  &:focus {
+    background-color: $white-color;
+    border: 4px solid #e5e5e5;
+    outline: none;
+  }
+
   @media (max-width: $mobile-width-only) {
     padding-left: 22px;
     padding-right: 11px;
@@ -56,7 +66,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-right: 44px;
+    padding-right: 29px;
   }
 }
 
@@ -68,10 +78,14 @@
   width: 58px;
   height: 58px;
   text-align: center;
+  box-sizing: content-box;
 
   @media (min-width: $tablet-width) {
     padding-left: 3px;
-    box-sizing: content-box;
     padding-right: 2px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 70px;
   }
 }
