--- a/source/sass/blocks/places-fieldset.scss
+++ b/source/sass/blocks/places-fieldset.scss
@@ -40,6 +40,10 @@
       bottom: 0;
       z-index: 1;
       width: 122px;
+
+      @media (min-width: $desktop-width) {
+        width: 272px;
+      }
     }
 
     &::after {
@@ -52,6 +56,10 @@
       bottom: 0;
       z-index: 1;
       width: 122px;
+
+      @media (min-width: $desktop-width) {
+        width: 272px;
+      }
     }
   }
 }
