--- a/source/sass/blocks/phone.scss
+++ b/source/sass/blocks/phone.scss
@@ -57,16 +57,28 @@
   @media (max-width: $mobile-width-only) {
     padding-left: 22px;
     padding-right: 11px;
+
+    &:focus {
+      padding-left: 18px;
+    }
   }
 
   @media (min-width: $tablet-width) {
     width: 100%;
     padding-left: 22px;
     padding-top: 4px;
+
+    &:focus {
+      padding-left: 18px;
+    }
   }
 
   @media (min-width: $desktop-width) {
     padding-right: 29px;
+
+    &:focus {
+      padding-right: 25px;
+    }
   }
 }
 
