Редактирование стилей в соответствии с БЭМ.

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -55,4 +55,5 @@
 @import "blocks/place-choice.scss";
 @import "blocks/check-block.scss";
 @import "blocks/comments-fieldset.scss";
-@import "blocks/modal-form.scss";
+@import "blocks/modal-form-failed.scss";
+@import "blocks/modal-form-success.scss";
