--- a/source/sass/blocks/phone.scss
+++ b/source/sass/blocks/phone.scss
@@ -55,6 +55,8 @@
   }
 
   @media (max-width: $mobile-width-only) {
+    // firefox fix
+    width: 220px;
     padding-left: 22px;
     padding-right: 11px;
 
