--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -14,7 +14,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 37px;
+    // Для страницы index
+    padding-top: 28px;
     padding-left: 15px;
     padding-right: 20px;
   }
