--- a/source/sass/blocks/inscription.scss
+++ b/source/sass/blocks/inscription.scss
@@ -69,8 +69,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    letter-spacing: 0.25px;
     padding-top: 32px;
-    padding-left: 14px;
+    padding-left: 0;
   }
 }
