--- a/source/sass/blocks/intro-video.scss
+++ b/source/sass/blocks/intro-video.scss
@@ -57,6 +57,7 @@
     margin-top: 78px;
     margin-left: 199px;
     margin-right: 201px;
+    margin-bottom: 90px;
   }
 }
 
@@ -76,7 +77,7 @@
   width: 100%;
 
   @media (max-width: $mobile-width-only) {
-    grid-template-columns: 60% 20% 20%;
+    grid-template-columns: 50% 25% 25%;
     grid-template-rows: 45px 66px;
     grid-template-areas: "timeline replay subtitles fullscreen";
     width: 280px;
