--- a/source/sass/blocks/player.scss
+++ b/source/sass/blocks/player.scss
@@ -22,7 +22,7 @@
     grid-row: 2 / 3;
     background-color: #f2f2f2;
     padding-left: 25px;
-    padding-top: 25px;
+    padding-top: 23px;
   }
 
   @media (min-width: $tablet-width) {
@@ -41,7 +41,8 @@
     grid-row: 2 / 3;
     background-color: #f2f2f2;
     justify-content: space-around;
-    padding-top: 25px;
+    padding-top: 23px;
+    padding-left: 30px;
   }
 
   @media (min-width: $tablet-width) {
@@ -64,7 +65,8 @@
     grid-row: 2 / 3;
     background-color: #f2f2f2;
     justify-content: space-around;
-    padding-top: 25px;
+    padding-top: 23px;
+    padding-left: 4px;
   }
 
   @media (min-width: $tablet-width) {
