--- a/source/sass/blocks/review-form.scss
+++ b/source/sass/blocks/review-form.scss
@@ -18,7 +18,7 @@
     grid-template-rows: 1fr auto auto 1fr;
     margin-left: 120px;
     margin-right: 120px;
-    margin-bottom: 67px;
+    margin-bottom: 73px;
   }
 }
 
@@ -41,6 +41,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    margin-top: 6px;
     min-width: 480px;
     padding-left: 151px;
     padding-right: 145px;
