--- a/source/sass/blocks/search-section.scss
+++ b/source/sass/blocks/search-section.scss
@@ -33,6 +33,7 @@
 
 .search-section__subtitle {
   text-align: center;
+  @include text-main-photo;
 
   @media (max-width: $mobile-width-only) {
     line-height: 24px;
@@ -82,13 +83,13 @@
 
   @media (min-width: $tablet-width) {
     @include style-btn-tablet;
-    margin-top: 43px;
+    margin-top: 38px;
     margin-bottom: 58px;
   }
 
   @media (min-width: $desktop-width) {
     @include style-btn-tablet;
-    margin-top: 43px;
-    margin-bottom: 71px;
+    margin-top: 41px;
+    margin-bottom: 66px;
   }
 }
