Исправления валидации html.

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -46,6 +46,9 @@
 @import "blocks/client-review.scss";
 @import "blocks/review-form.scss";
 @import "blocks/introduce-fieldset.scss";
+@import "blocks/first-name.scss";
+@import "blocks/last-name.scss";
+@import "blocks/middle-name.scss";
 @import "blocks/phone.scss";
 @import "blocks/email.scss";
 @import "blocks/contacts-fieldset.scss";
